[package]
authors = ["Rohan Sen"]
name = "actix-todo"
version = "2.0.0"
edition = "2018"

[dependencies]
actix-web = "4.8.0"
actix-files = "0.6.6"
actix-session = "0.9.0"
actix-redis = { version = "0.13.0", features = ["web"] }
actix-rt = "2.10.0"
dotenv = "0.15.0"
env_logger = "0.11.5"
futures = "0.3.1"
log = "0.4.3"
serde = "1.0.69"
serde_derive = "1.0.69"
serde_json = "1.0.22"
tera = "1.20.0"
listenfd = "1.0.1"

[dependencies.diesel]
features = ["postgres", "r2d2"]
version = "2.2.2"
